# eag-v3-session6

./: .env.example  .gitignore  PLAN.md  README.md  _gateway_path.py  action.py  agent-client.js  agent.js  agent6.py  api.js  decision.py  manifest.json  mcp-client.js  mcp_server.py  memory.py  perception.py  popup.html  popup.js  pyproject.toml  schemas.py  specification.md  styles.css  tools.js
api/: decision.py  mcp_server.py  memory.py  perception.py
api/mcp-server-meeting-intel/: .gitignore
api/mcp-server-meeting-intel/agents/workspace/: tools.py
api/mcp-server/llm_gatewayV3/: __init__.py  gateway_v3.db
docs/: prompt-evaluation.md
mcp-server/: .env.example  README.md  cache.js  cache.py  google-auth.js  google_auth.py  handlers.js  index.js  llm.js  llm.py  models.py  package-lock.json  package.json  pyproject.toml  serpapi.js  serpapi.py  server.js  server.py  tools.py
mcp-server-meeting-intel/: .env.example
mcp-server-meeting-intel/agents/: __init__.py  memory.py  registry.py
mcp-server/agents/: llm.py  memory.py  registry.py  runner.py  sub_agent.py
mcp-server/agents/main/: __init__.py  prompt.py  tools.py
mcp-server/agents/research/: __init__.py  prompt.py  tools.py
mcp-server/agents/workspace/: __init__.py  prompt.py
ui/extension-meeting-intel/: styles.css
