[project]
name = "eagv3-session6-agent"
version = "0.1.0"
description = "Four-layer cognitive agent (perception/memory/decision/action) for EAG v3 Session 6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # MCP stdio transport + FastMCP tool decorators (used by mcp_server.py)
    "mcp>=1.18",
    # Validation on every layer boundary (per the assignment constraints)
    "pydantic>=2.10",
    # HTTP for the gateway client + the frankfurter currency call in mcp_server
    "httpx>=0.28",
    # Web search backends
    "ddgs>=9.7",
    "tavily-python>=0.6",
    # Web fetcher
    "crawl4ai>=0.7",
    # .env loading (both server-side keys and the agent's gateway URL)
    "python-dotenv>=1.0",
    # LLM Gateway V3 server deps — kept here so the gateway can run from
    # this project's uv venv instead of needing its own .venv. The gateway's
    # own run.sh still works as a fallback.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jsonschema>=4.21",
    "tzdata>=2026.2",
]

[tool.uv]
package = false

# The LLM Gateway lives at api/mcp-server/llm_gatewayV3/. Static analyzers
# need to know about that extra source root to resolve imports of the
# form `from llm_gatewayV3.client import LLM`. At runtime, api/_gateway_path.py
# inserts the same path into sys.path before any agent module imports the
# gateway.
[tool.pyright]
# api/ is the source root for the cognitive layers; api/mcp-server/ is
# the gateway source root (`from llm_gatewayV3.client import LLM`).
extraPaths = ["api", "api/mcp-server"]

[tool.ruff]
src = ["api", "api/mcp-server"]
