[project]
name = "meeting-intelligence-mcp-server"
version = "0.2.0"
description = "MCP server exposing meeting intelligence tools (calendar, email, web, attendees, stats). Python rewrite using Pydantic v2."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.10.0",
    "starlette>=0.41.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
]

[tool.uv]
package = false
